crates/function-metrics/tests/ui/fail/reserved_label.stderr
error: label name `le` is reserved for Prometheus or function-metrics
 --> tests/ui/fail/reserved_label.rs:3:27
  |
3 | #[function_metrics(labels(le = "1.0"))]
  |                           ^^
